--- a/patientService.properties
+++ b/patientService.properties
@@ -17,3 +17,5 @@ spring.jpa.open-in-view=false
 #which are used by @PropertySource in patientServiceApplication
 #Log level configuration
 #see logback.xml
+#Number Of Patient Per Page
+com.medilabosolutions.type2diabetesfinder.patientservice.patientPerPage=4
