--- a/frontService.properties
+++ b/frontService.properties
@@ -6,3 +6,6 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.jackson.date-format=yyyy-MM-dd
 #Log level configuration
 #see logback.xml
+
+#Eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
