--- a/patientService.properties
+++ b/patientService.properties
@@ -20,3 +20,6 @@ spring.jpa.open-in-view=false
 
 #Number Of Patient Per Page
 com.medilabosolutions.type2diabetesfinder.patientservice.patientPerPage=3
+
+#Eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
