--- a/frontService.properties
+++ b/frontService.properties
@@ -9,3 +9,5 @@ spring.jackson.date-format=yyyy-MM-dd
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.registerWithEureka:true
+eureka.client.fetchRegistry:true
