--- a/patientService.properties
+++ b/patientService.properties
@@ -23,3 +23,5 @@ com.medilabosolutions.type2diabetesfinder.patientservice.patientPerPage=3
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.registerWithEureka:true
+eureka.client.fetchRegistry:true
