fix : typo in gatewayService.properties

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -5,4 +5,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-sprind.cloud.gateway.discovery.location.enable=true
+spring.cloud.gateway.discovery.location.enable=true
