--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -5,4 +5,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
