wip : try first route

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -7,3 +7,7 @@ eureka.client.fetch-registry=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes.id=frontService
+spring.cloud.gateway.routes.uri=http://localhost:91103/frontservice
+spring.cloud.gateway.routes.predicates=Path=/**
