--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -7,3 +7,14 @@ eureka.client.fetch-registry=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# lower_case_service_id vs name in properties
+spring.cloud.gateway.routes[0].id = frontservice_frontService
+# lb : load balancer UserService : application name in respective microservice application properties file
+spring.cloud.gateway.routes[0].uri = lb://frontservice
+# -- Predicates are boolean conditions
+spring.cloud.gateway.routes[0].predicates[0] = Path=/{segment}
+
+
+
+
