--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -13,8 +13,4 @@ spring.cloud.gateway.routes[0].id = frontservice_frontService
 # lb : load balancer UserService : application name in respective microservice application properties file
 spring.cloud.gateway.routes[0].uri = lb://frontservice
 # -- Predicates are boolean conditions
-spring.cloud.gateway.routes[0].predicates[0] = Path=/{segment}
-
-
-
-
+spring.cloud.gateway.routes[0].predicates[0] = Path=/**
