--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -11,6 +11,6 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 # lower_case_service_id vs name in properties
 spring.cloud.gateway.routes[0].id = frontservice_frontService
 # lb : load balancer UserService : application name in respective microservice application properties file
-spring.cloud.gateway.routes[0].uri = lb://frontservice
+spring.cloud.gateway.routes[0].uri = http://localhost:8080
 # -- Predicates are boolean conditions
-spring.cloud.gateway.routes[0].predicates[0] = Path=/**
+spring.cloud.gateway.routes[0].predicates[0] = Path=/
