wip : write and try routes

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -8,9 +8,16 @@ eureka.client.fetch-registry=true
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# lower_case_service_id vs name in properties
-spring.cloud.gateway.routes[0].id = frontservice_frontService
-# lb : load balancer UserService : application name in respective microservice application properties file
-spring.cloud.gateway.routes[0].uri = http://localhost:8080
-# -- Predicates are boolean conditions
-spring.cloud.gateway.routes[0].predicates[0] = Path=/
+# Route configuration for frontservice
+spring.cloud.gateway.routes[0].id=frontservice
+# lb:// uses Eureka service discovery to find the service
+spring.cloud.gateway.routes[0].uri=lb://frontservice
+# Route all requests to the root path to frontservice
+spring.cloud.gateway.routes[0].predicates[0]=Path="'/','/createpatient','/updatepatient/{id}','/deletepatient/{id}','/savepatient'"
+
+# Route configuration for patientservice
+spring.cloud.gateway.routes[1].id=patientservice
+# lb:// uses Eureka service discovery to find the service
+spring.cloud.gateway.routes[1].uri=lb://patientservice
+# Route all requests to /api/patients/** to patientservice
+spring.cloud.gateway.routes[1].predicates[0]=Path="'/patients','patients/**'"
