--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -13,11 +13,11 @@ spring.cloud.gateway.routes[0].id=frontservice
 # lb:// uses Eureka service discovery to find the service
 spring.cloud.gateway.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
-spring.cloud.gateway.routes[0].predicates[0]=Path=/,/home,/createpatient,/updatepatient/{id},/deletepatient/{id},/savepatient
+spring.cloud.gateway.routes[0].predicates[0]=Path=/,/home/**,/createpatient,/updatepatient/{id},/deletepatient/{id},/savepatient
 
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
 # lb:// uses Eureka service discovery to find the service
 spring.cloud.gateway.routes[1].uri=lb://patientservice
-# Route all requests to /api/patients/** to patientservice
+# Route all requests to /patients/** to patientservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/patients,patients/**
