--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -13,7 +13,7 @@ spring.cloud.gateway.routes[0].id=frontservice
 # lb:// uses Eureka service discovery to find the service
 spring.cloud.gateway.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
-spring.cloud.gateway.routes[0].predicates[0]=Path=/front,/front/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
 
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
