wip : try gateway mvc

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -9,15 +9,15 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # Route configuration for frontservice
-spring.cloud.gateway.routes[0].id=frontservice
+spring.cloud.gateway.mvc.routes[0].id=frontservice
 # lb:// uses Eureka service discovery to find the service
-spring.cloud.gateway.routes[0].uri=lb://frontservice
+spring.cloud.gateway.mvc.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
-spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
+spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/front/**
 
 # Route configuration for patientservice
-spring.cloud.gateway.routes[1].id=patientservice
+spring.cloud.gateway.mvc.routes[1].id=patientservice
 # lb:// uses Eureka service discovery to find the service
-spring.cloud.gateway.routes[1].uri=lb://patientservice
+spring.cloud.gateway.mvc.routes[1].uri=lb://patientservice
 # Route all requests to /patients/** to patientservice
-spring.cloud.gateway.routes[1].predicates[0]=Path=/patients/**
+spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/patients/**
