wip : try filters

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -15,6 +15,9 @@ spring.cloud.gateway.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
 
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
+
+
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
 # lb:// uses Eureka service discovery to find the service
