--- a/frontService.properties
+++ b/frontService.properties
@@ -11,3 +11,6 @@ spring.jackson.date-format=yyyy-MM-dd
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 eureka.client.registerWithEureka:true
 eureka.client.fetchRegistry:true
+
+#Need it because lb:// to stay on host 9103 and not shift to 8080
+server.forward-headers-strategy=FRAMEWORK
