--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -1,4 +1,5 @@
 server.port=9103
+spring.main.web-application-type=reactive
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
@@ -14,6 +15,8 @@ spring.cloud.gateway.routes[0].id=frontservice
 spring.cloud.gateway.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
+# Filter configuration to access static assets with Spring Cloud Gateway
+#spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
 
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
