--- a/patientService.properties
+++ b/patientService.properties
@@ -20,6 +20,7 @@ spring.jpa.open-in-view=false
 
 #Number Of Patient Per Page
 com.medilabosolutions.type2diabetesfinder.patientservice.patientPerPage=3
+management.endpoints.web.exposure.include=refresh,health,info
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
