--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -1,5 +1,4 @@
 server.port=9103
-spring.main.web-application-type=reactive
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
@@ -16,7 +15,7 @@ spring.cloud.gateway.routes[0].uri=lb://frontservice
 # Route all requests to the root path to frontservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
 # Filter configuration to access static assets with Spring Cloud Gateway
-#spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
 
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
