feat : try SpringSecurity conf in gatewayService.properties

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -16,6 +16,7 @@ spring.cloud.gateway.routes[0].uri=lb://frontservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
 # Filter configuration to access static assets with Spring Cloud Gateway : don't work
 #spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
 # Route configuration for patientservice
 spring.cloud.gateway.routes[1].id=patientservice
@@ -23,3 +24,4 @@ spring.cloud.gateway.routes[1].id=patientservice
 spring.cloud.gateway.routes[1].uri=lb://patientservice
 # Route all requests to /patients/** to patientservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/patients/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
