--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -8,18 +8,26 @@ eureka.client.fetch-registry=true
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# Route configuration for frontservice
-spring.cloud.gateway.routes[0].id=frontservice
+# Route configuration for login
+spring.cloud.gateway.routes[0].id=gatewayservice
 # lb:// uses Eureka service discovery to find the service
-spring.cloud.gateway.routes[0].uri=lb://frontservice
+spring.cloud.gateway.routes[0].uri=lb://gatewayservice
+# Route all requests to /login to gatewayservice
+spring.cloud.gateway.routes[0].predicates[0]=Path=/login
+
+# Route configuration for frontservice
+spring.cloud.gateway.routes[1].id=frontservice
+# lb:// uses Eureka service discovery to find the service
+spring.cloud.gateway.routes[1].uri=lb://frontservice
 # Route all requests to the root path to frontservice
-spring.cloud.gateway.routes[0].predicates[0]=Path=/front/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/front/**
 # Filter configuration to access static assets with Spring Cloud Gateway : don't work
 #spring.cloud.gateway.routes[0].filters[0]=RewritePath=/frontservice/?(?<segment>.*), /$\{segment}
 
 # Route configuration for patientservice
-spring.cloud.gateway.routes[1].id=patientservice
+spring.cloud.gateway.routes[2].id=patientservice
 # lb:// uses Eureka service discovery to find the service
-spring.cloud.gateway.routes[1].uri=lb://patientservice
+spring.cloud.gateway.routes[2].uri=lb://patientservice
 # Route all requests to /patients/** to patientservice
-spring.cloud.gateway.routes[1].predicates[0]=Path=/patients/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/patients/**
+
