fix : spring.jackson.date-format=yyyy-MM-dd HH:mm:ss

--- a/noteService.properties
+++ b/noteService.properties
@@ -1,5 +1,5 @@
 #JSON Properties
-spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 # Server port
 server.port=9003
 
