feat : add route for noteservice in gateway.properties

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -31,3 +31,9 @@ spring.cloud.gateway.routes[2].uri=lb://patientservice
 # Route all requests to /patients/** to patientservice
 spring.cloud.gateway.routes[2].predicates[0]=Path=/patients/**
 
+# Route configuration for noteservice
+spring.cloud.gateway.routes[3].id=noteservice
+# lb:// uses Eureka service discovery to find the service
+spring.cloud.gateway.routes[3].uri=lb://noteservice
+# Route all requests to /patients/** to patientservice
+spring.cloud.gateway.routes[3].predicates[0]=Path=/notes/**
