feat : add properties and route for gatewayService

--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -37,3 +37,10 @@ spring.cloud.gateway.routes[3].id=noteservice
 spring.cloud.gateway.routes[3].uri=lb://noteservice
 # Route all requests to /patients/** to patientservice
 spring.cloud.gateway.routes[3].predicates[0]=Path=/notes/**
+
+# Route configuration for noteservice
+spring.cloud.gateway.routes[4].id=riskfactorservice
+# lb:// uses Eureka service discovery to find the service
+spring.cloud.gateway.routes[4].uri=lb://riskfactorservice
+# Route all requests to /patients/** to patientservice
+spring.cloud.gateway.routes[4].predicates[0]=Path=/riskfactor/**
